Build base and monitor nodes
	- Still need to finish monitor node

--- a/docker_images/base/Dockerfile
+++ b/docker_images/base/Dockerfile
@@ -7,5 +7,6 @@ RUN apt-get update
 
 RUN apt-get install -y erlang-base
 RUN apt-get install -y erlang-inets
+RUN apt-get install -y erlang-lager
 
 WORKDIR /release
