--- a/docker_images/base/Dockerfile
+++ b/docker_images/base/Dockerfile
@@ -5,8 +5,20 @@ MAINTAINER Rino Jose "rjose@spreadsheetkit.com"
 
 RUN apt-get update
 
+# Install erlang
 RUN apt-get install -y erlang-base
 RUN apt-get install -y erlang-inets
 RUN apt-get install -y erlang-lager
 
-WORKDIR /release
+# Install runit
+RUN apt-get install -y runit
+
+# Bootstrap the environment variables
+COPY runit_bootstrap /usr/sbin/runit_bootstrap
+
+# NOTE: This is an example of how to specify a service to run via runit
+# # Add sample
+# RUN mkdir -p /etc/service/hello/
+# COPY ./hello/run /etc/service/hello/run
+
+ENTRYPOINT ["/usr/sbin/runit_bootstrap"]
