Finish pass where we get kibana set up

--- a/docker_images/base/Dockerfile
+++ b/docker_images/base/Dockerfile
@@ -16,11 +16,11 @@ RUN apt-get install -y runit
 # Bootstrap the environment variables
 COPY runit_bootstrap /usr/sbin/runit_bootstrap
 
+# Install syslog-ng
+RUN apt-get install -y syslog-ng
 
-# NOTE: This is an example of how to specify a service to run via runit
-# # Add sample
-# RUN mkdir -p /etc/service/hello/
-# COPY ./hello/run /etc/service/hello/run
-
+# Update syslog-ng config to uncomment "SYSLOGNG_OPTS" line
+# (This prevents an error message)
+RUN sed -i 's/^#\(SYSLOGNG_OPTS="--no-caps"\)/\1/g' /etc/default/syslog-ng
 
 ENTRYPOINT ["/usr/sbin/runit_bootstrap"]
