--- a/docker_images/base/monitor/central.conf
+++ b/docker_images/base/monitor/central.conf
@@ -1,15 +1,13 @@
 input {
-	redis {
-		host => "127.0.0.1"
-		type => "redis-input"
-		data_type => "list"
-		key => "logstash"
-	}
+      file {
+      	   type => "syslog"
+	   path => "/var/log/messages"
+      }
 }
 
 output {
 	stdout {}
 	elasticsearch {
-		cluster => "elasticsearch"
+		cluster => "logstash"
 	}
 }
