Got an erlang release running
    - Have a cowboy server with a simple handler

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ rel/example_project
 .rebar
 *~
 log
+/erlang_releases/ssk_web/_rel/
+/erlang_releases/ssk_web/rel/
+/erlang_releases/ssk_web/relx
+/erlang_releases/ssk_web/.erlang.mk.packages.v2
