--- a/erlang_releases/ssk_web/Makefile
+++ b/erlang_releases/ssk_web/Makefile
@@ -4,6 +4,14 @@ DEPS = lager cowboy lager_syslog
 dep_cowboy = git git://github.com/ninenines/cowboy.git 1.0.1
 dep_lager_syslog = git git://github.com/basho/lager_syslog master
 
+.PHONY: release clean-release
+ 
+release: clean-release all
+	relx -o rel/$(PROJECT)
+ 
+clean-release:
+	rm -rf rel/$(PROJECT)
+
 include erlang.mk
 
 # Compile flags
