Pass 1: Can build, run, stop base sskit image

--- a/n-pass/Makefile
+++ b/n-pass/Makefile
@@ -1,12 +1,16 @@
+#-------------------------------------------------------------------------------
+# Prints help message
+#-------------------------------------------------------------------------------
 .PHONY: help
 help:
 	@echo "make d: Creates documentation"
 	@echo "make clean"
 
+
 .PHONY: d
 d:
-	asciidoctor index.adoc
+	asciidoctor *.adoc
 
 .PHONY: clean
 clean:
-	rm index.html
+	rm *.html
