--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ log
 /erlang_releases/ssk_web/relx
 /erlang_releases/ssk_web/.erlang.mk.packages.v2
 /docker_images/base/derived/ssk_web/rel/
+/n-pass/*.html
