--- a/docker/monitor/to_copy/etc/syslog-ng.conf
+++ b/docker/monitor/to_copy/etc/syslog-ng.conf
@@ -15,16 +15,29 @@ options { chain_hostnames(off); flush_lines(0); use_dns(no); use_fqdn(no);
 ########################
 # Log paths
 ########################
-log { source(s_src); destination(d_monitor); };
+log { source(s_network); destination(d_messages); };
 
 log { source(s_src); filter(f_auth); destination(d_auth); };
 log { source(s_src); filter(f_cron); destination(d_cron); };
 log { source(s_src); filter(f_daemon); destination(d_daemon); };
 log { source(s_src); filter(f_kern); destination(d_kern); };
 log { source(s_src); filter(f_lpr); destination(d_lpr); };
+log { source(s_src); filter(f_syslog3); destination(d_syslog); };
 log { source(s_src); filter(f_user); destination(d_user); };
 log { source(s_src); filter(f_uucp); destination(d_uucp); };
 
+log { source(s_src); filter(f_mail); destination(d_mail); };
+#log { source(s_src); filter(f_mail); filter(f_info); destination(d_mailinfo); };
+#log { source(s_src); filter(f_mail); filter(f_warn); destination(d_mailwarn); };
+#log { source(s_src); filter(f_mail); filter(f_err); destination(d_mailerr); };
+
+log { source(s_src); filter(f_news); filter(f_crit); destination(d_newscrit); };
+log { source(s_src); filter(f_news); filter(f_err); destination(d_newserr); };
+log { source(s_src); filter(f_news); filter(f_notice); destination(d_newsnotice); };
+#log { source(s_src); filter(f_cnews); destination(d_console_all); };
+#log { source(s_src); filter(f_cother); destination(d_console_all); };
+
+#log { source(s_src); filter(f_ppp); destination(d_ppp); };
 
 log { source(s_src); filter(f_debug); destination(d_debug); };
 log { source(s_src); filter(f_error); destination(d_error); };
@@ -36,14 +49,22 @@ log { source(s_src); filter(f_crit); destination(d_console); };
 ########################
 # Sources
 ########################
+
+# This is where ssk clients send their logs to
+source s_network { tcp(ip(0.0.0.0) port(1000)); };
+
 # This is the default behavior of sysklogd package
 # Logs may come from unix stream, but not from another machine.
 #
 source s_src {
-       unix-stream("/dev/log");
-       #system();
+	unix-stream("/dev/log");
+#       system();
        internal();
 };
+
+# If you wish to get logs from remote machine you should uncomment
+# this and comment the above source line.
+#
 
 
 ########################
@@ -61,12 +82,17 @@ destination d_syslog { file("/var/log/syslog"); };
 destination d_user { file("/var/log/user.log"); };
 destination d_uucp { file("/var/log/uucp.log"); };
 
-# This sends syslog entries to "monitor" running in the same
-# docker environment. This is only for development.
-destination d_monitor {
-	syslog("monitor" transport("tcp") port(1000));
-};
+# This files are the log come from the mail subsystem.
+#
+destination d_mailinfo { file("/var/log/mail.info"); };
+destination d_mailwarn { file("/var/log/mail.warn"); };
+destination d_mailerr { file("/var/log/mail.err"); };
 
+# Logging for INN news system
+#
+destination d_newscrit { file("/var/log/news/news.crit"); };
+destination d_newserr { file("/var/log/news/news.err"); };
+destination d_newsnotice { file("/var/log/news/news.notice"); };
 
 # Some `catch-all' logfiles.
 #
@@ -110,6 +136,7 @@ filter f_local { facility(local0, local1, local3, local4, local5,
                         local6, local7) and not filter(f_debug); };
 filter f_mail { facility(mail) and not filter(f_debug); };
 filter f_news { facility(news) and not filter(f_debug); };
+filter f_syslog3 { not facility(auth, authpriv, mail) and not filter(f_debug); };
 filter f_user { facility(user) and not filter(f_debug); };
 filter f_uucp { facility(uucp) and not filter(f_debug); };
 
@@ -118,3 +145,6 @@ filter f_cother { level(debug, info, notice, warn) or facility(daemon, mail); };
 
 filter f_ppp { facility(local2) and not filter(f_debug); };
 filter f_console { level(warn .. emerg); };
+
+
+
