Got exlager to work
    - Messages are sent to a centralized syslog server

--- a/docker/dev/to_copy/etc/syslog-ng.conf
+++ b/docker/dev/to_copy/etc/syslog-ng.conf
@@ -16,6 +16,7 @@ options { chain_hostnames(off); flush_lines(0); use_dns(no); use_fqdn(no);
 # Log paths
 ########################
 log { source(s_src); destination(d_monitor); };
+log { source(s_localhost); destination(d_monitor); destination(d_messages);};
 
 log { source(s_src); filter(f_auth); destination(d_auth); };
 log { source(s_src); filter(f_cron); destination(d_cron); };
@@ -44,6 +45,8 @@ source s_src {
        #system();
        internal();
 };
+
+source s_localhost { udp(ip(127.0.0.1) port(1999)); };
 
 
 ########################
